fixed gap

--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -40,6 +40,7 @@
 
 .form textarea {
     width: 570px;
+    margin-top: 8.92px;
     height: 184px;
 }
 
